<?xml version="1.0" encoding="utf-8"?>


<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addExpenseBtn"
        style="@style/add_expense_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/margin5"
        android:contentDescription="@string/add_expense" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/topBar"
            style="@style/top_bar">

            <TextView
                android:id="@+id/currentMonthTxt"
                style="@style/top_app_bar_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Janeiro 2000"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/nextMonthBtn"
                app:layout_constraintStart_toEndOf="@+id/prevMonthBtn"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/filterBtn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/filters"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_filters" />

            <ImageView
                android:id="@+id/optionsBtn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_options" />

            <ImageView
                android:id="@+id/nextMonthBtn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="@dimen/margin3"
                android:contentDescription="@string/next_month"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/optionsBtn"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_forward" />

            <ImageView
                android:id="@+id/prevMonthBtn"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="@dimen/margin3"
                android:contentDescription="@string/prev_month"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/filterBtn"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_back" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin3">

                    <TextView
                        android:id="@+id/totalMonthLabelTxt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin3"
                        android:text="@string/total_month_label"
                        android:textAppearance="@style/top_box.text"
                        app:layout_constraintEnd_toStartOf="@+id/centerGuideline"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/totalMonthValueTxt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="R$ 0,00"
                        android:textAppearance="@style/top_box.value.large"
                        app:layout_constraintEnd_toEndOf="@+id/totalMonthLabelTxt"
                        app:layout_constraintStart_toStartOf="@+id/totalMonthLabelTxt"
                        app:layout_constraintTop_toBottomOf="@+id/totalMonthLabelTxt" />

                    <TextView
                        android:id="@+id/pendingMonthLabelTxt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin3"
                        android:layout_marginEnd="@dimen/margin2"
                        android:text="@string/pending_mounth_label"
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/top_box.text"
                        app:layout_constraintBottom_toTopOf="@+id/pendingMonthValueTxt"
                        app:layout_constraintEnd_toStartOf="@+id/clockIcon"
                        app:layout_constraintStart_toStartOf="@+id/centerGuideline"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed" />

                    <TextView
                        android:id="@+id/pendingMonthValueTxt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="R$ 0,00"
                        android:textAlignment="textEnd"
                        android:textAppearance="@style/top_box.value"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@+id/pendingMonthLabelTxt"
                        app:layout_constraintStart_toStartOf="@+id/pendingMonthLabelTxt"
                        app:layout_constraintTop_toBottomOf="@+id/pendingMonthLabelTxt" />

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/centerGuideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.5" />

                    <ImageView
                        android:id="@+id/clockIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="@+id/pendingMonthValueTxt"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/pendingMonthLabelTxt"
                        app:srcCompat="@drawable/ic_clock" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="@dimen/margin3">

                    <include layout="@layout/expense_card" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

