<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pager.PagerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            style="@style/ToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/filtersButton"
                    style="@style/ToolbarIconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/filters"
                    android:drawableLeft="@drawable/ic_filters"
                    android:padding="@dimen/margin2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/previousMonthButton"
                    style="@style/ToolbarIconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin4"
                    android:contentDescription="@string/prev_month"
                    android:drawableLeft="@drawable/ic_arrow_left"
                    android:padding="@dimen/margin2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/filtersButton"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/selectMonthButton"
                    style="@style/ToolbarIconButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/monthYearLinearLayout"
                    app:layout_constraintStart_toStartOf="@+id/monthYearLinearLayout"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/monthYearLinearLayout"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="@dimen/margin3"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/nextMonthButton"
                    app:layout_constraintStart_toEndOf="@+id/previousMonthButton"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/monthTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="..."
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                        app:layout_constraintEnd_toStartOf="@+id/nextMonthButton"
                        app:layout_constraintStart_toEndOf="@+id/previousMonthButton"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/yearTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="..."
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.Material3.LabelSmall"
                        app:layout_constraintEnd_toEndOf="@+id/monthTextView"
                        app:layout_constraintStart_toStartOf="@+id/monthTextView"
                        app:layout_constraintTop_toBottomOf="@+id/monthTextView" />

                </LinearLayout>

                <Button
                    android:id="@+id/nextMonthButton"
                    style="@style/ToolbarIconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin4"
                    android:contentDescription="@string/next_month"
                    android:drawableRight="@drawable/ic_arrow_right"
                    android:padding="@dimen/margin2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/optionsButton"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/optionsButton"
                    style="@style/ToolbarIconButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/next_month"
                    android:drawableRight="@drawable/ic_options"
                    android:padding="@dimen/margin2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addExpenseButton"
        style="@style/FloatingActionButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/margin3"
        android:contentDescription="Add occurrence"
        app:srcCompat="@drawable/ic_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
